[package]
edition = "2021"
name = "rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0.65"
enum-map = "~2.0.1"
reqwest = "0.11.12"
serde = {version = "1.0.140", features = ["derive"]}
serde_json = "1.0.82"
unleash-api-client = {version = "0.8.0", features = ["reqwest-client"]}
